test/negative/ClassInheritIdenticalSignaturesCanonical/X.java
package C;
public class X {
    public X() {}
}
